# Quantized-VLM

./: .gitignore  CLAUDE.md  LEARNING.md  README.md  launch.sh  pyproject.toml
backend/: main.py  requirements.txt  server.py
backend/app/api/: admin_routes.py  auth_routes.py  camera_thread.py  eval_routes.py  library_routes.py  routes.py
backend/app/core/: config.py  database.py  security.py
backend/app/services/: capture.py  eval.py  pipeline.py
backend/tests/: test_inference.py
docs/documentation/: BRIEFING.md  CLAUDE.md  LEARNING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/components/: ButtonPanel.tsx  CameraFeed.tsx  ChangePasswordModal.tsx  EvalRunner.tsx  PasswordStrengthBar.tsx  ReportList.tsx  ReportViewer.tsx  ResultPanel.tsx  StatusBar.tsx  ThemeToggle.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/app/hooks/: useEvalStatus.ts  useStatus.ts
frontend/src/app/pages/: AdminPage.tsx  Dashboard.tsx  EvalPage.tsx  LibraryPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/app/services/: api.ts
legacy/: README.md
