[project]
name = "quantized-vlm"
version = "0.1.0"
description = "Real-time Vision-Language Model inference on the Jetson Orin Nano, served over FastAPI"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python==0.3.31",
    "opencv-python-headless==4.13.0.92",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
